pagination in student list

--- a/src/App.css
+++ b/src/App.css
@@ -1956,6 +1956,10 @@ border: #262626 1px solid;
 padding: 6px 16px 6px 16px;
 margin: 0 20px 0 0;
  }
+.pagination{
+     width:100%;
+     cursor:pointer;
+}
  /**/
  /*====================================================*/
  /*====================================================*/
