--- a/src/App.css
+++ b/src/App.css
@@ -2023,6 +2023,22 @@ margin: 0 20px 0 0;
      width:100%;
      cursor:pointer;
 }
+.naivga1{
+     width: 50%;
+     float: left;
+}
+.naivga1a{
+   width: 50%;
+    float: left;
+    margin: 17px 0 0 0;
+    position: relative;
+}
+.naivga1a a{
+    position: absolute;
+    top: 14px;
+    left: 10px;
+    color: #c30707;
+}
  /**/
  /*====================================================*/
  /*====================================================*/
